--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -27,11 +27,22 @@
     },
     {
       "name": "C/C++ Runner: Debug Session",
-      "type": "lldb",
+      "type": "cppdbg",
       "request": "launch",
       "args": [],
-      "cwd": "/Users/jintaixi/Desktop/Codes/OS/OS_projects",
-      "program": "/Users/jintaixi/Desktop/Codes/OS/OS_projects/build/Debug/outDebug"
+      "stopAtEntry": false,
+      "externalConsole": false,
+      "cwd": "/home/kagurazaka/OSP/OS_projects/socket",
+      "program": "/home/kagurazaka/OSP/OS_projects/socket/build/Debug/outDebug",
+      "MIMode": "gdb",
+      "miDebuggerPath": "gdb",
+      "setupCommands": [
+        {
+          "description": "Enable pretty-printing for gdb",
+          "text": "-enable-pretty-printing",
+          "ignoreFailures": true
+        }
+      ]
     }
   ]
 }
