--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
     "stdio.h": "c",
     "unistd.h": "c",
     "pthread.h": "c",
-    "types.h": "c"
+    "types.h": "c",
+    "string.h": "c"
   },
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
